<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- daftar strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="masukkan_nama_pengguna_anda_string">Masukkan Nama Pengguna Anda</string>
	<string name="masukkan_email_atau_nomor_telelpon_anda_string">Masukkan Email atau Nomor Telelpon Anda</string>
	<string name="masukkan_kata_sandi_anda_string">Masukkan Kata Sandi Anda</string>
	<string name="daftar_string">Daftar</string>
	<string name="daftar_ek1_string">Daftar</string>
	<string name="nama_pengguna_string">Nama Pengguna</string>
	<string name="email_atau_no__telepon_string">Email atau No. Telepon</string>
	<string name="kata_sandi_string">Kata Sandi</string>
	<string name="sudah_punya_akun__string">Sudah punya akun?</string>
</resources>