<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		daftar
	 *	@date 		Sunday 03rd of September 2023 03:27:53 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/daftar" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/_bg__daftar"
				android:background="@drawable/_bg__daftar_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="430dp"
				android:layout_height="932dp" />


			<RelativeLayout android:id="@+id/frame_nama"
				android:layout_marginTop="252dp"
				android:layout_marginStart="25dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView android:id="@+id/masukkan_nama_pengguna_anda"
					android:textSize="14sp"
					android:textColor="@color/masukkan_nama_pengguna_anda_color"
					android:layout_marginStart="10dp"
					android:layout_marginTop="15dp"
					android:layout_width="254dp"
					android:layout_height="31dp"
					android:text="@string/masukkan_nama_pengguna_anda_string"
					 />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/frame_email"
				android:layout_marginTop="360dp"
				android:layout_marginStart="25dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView android:id="@+id/masukkan_email_atau_nomor_telelpon_anda"
					android:textSize="14sp"
					android:textColor="@color/masukkan_nama_pengguna_anda_color"
					android:layout_marginStart="10dp"
					android:layout_marginTop="15dp"
					android:layout_width="324dp"
					android:layout_height="31dp"
					android:text="@string/masukkan_email_atau_nomor_telelpon_anda_string"
					 />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/frame_sandi"
				android:layout_marginTop="468dp"
				android:layout_marginStart="25dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView android:id="@+id/masukkan_kata_sandi_anda"
					android:textSize="14sp"
					android:textColor="@color/masukkan_nama_pengguna_anda_color"
					android:layout_marginStart="10dp"
					android:layout_marginTop="15dp"
					android:layout_width="211dp"
					android:layout_height="31dp"
					android:text="@string/masukkan_kata_sandi_anda_string"
					 />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/tmbl_daftar"
				android:layout_marginTop="571dp"
				android:layout_marginStart="25dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView android:id="@+id/daftar"
					android:textSize="16sp"
					android:textColor="@color/_bg__daftar_color"
					android:layout_marginStart="164dp"
					android:layout_marginTop="13dp"
					android:layout_width="72dp"
					android:layout_height="35dp"
					android:text="@string/daftar_string"
					 />

			</RelativeLayout>

			<TextView android:id="@+id/daftar_ek1"
				android:textStyle="bold"
				android:textSize="32sp"
				android:textColor="@color/daftar_ek1_color"
				android:layout_marginStart="164dp"
				android:layout_marginTop="102dp"
				android:layout_width="140dp"
				android:layout_height="70dp"
				android:text="@string/daftar_ek1_string"
				 />

			<TextView android:id="@+id/nama_pengguna"
				android:textSize="16sp"
				android:textColor="@color/daftar_ek1_color"
				android:layout_marginStart="25dp"
				android:layout_marginTop="215dp"
				android:layout_width="157dp"
				android:layout_height="35dp"
				android:text="@string/nama_pengguna_string"
				 />

			<TextView android:id="@+id/email_atau_no__telepon"
				android:textSize="16sp"
				android:textColor="@color/daftar_ek1_color"
				android:layout_marginStart="25dp"
				android:layout_marginTop="323dp"
				android:layout_width="204dp"
				android:layout_height="35dp"
				android:text="@string/email_atau_no__telepon_string"
				 />

			<TextView android:id="@+id/kata_sandi"
				android:textSize="16sp"
				android:textColor="@color/daftar_ek1_color"
				android:layout_marginStart="25dp"
				android:layout_marginTop="431dp"
				android:layout_width="108dp"
				android:layout_height="35dp"
				android:text="@string/kata_sandi_string"
				 />

			<TextView android:id="@+id/sudah_punya_akun_"
				android:textSize="16sp"
				android:textColor="@color/daftar_ek1_color"
				android:layout_marginStart="135dp"
				android:layout_marginTop="640dp"
				android:layout_width="181dp"
				android:layout_height="35dp"
				android:text="@string/sudah_punya_akun__string"
				 />


			<RelativeLayout android:id="@+id/mode_light__type_default"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>


				<RelativeLayout android:id="@+id/right_side"
					android:layout_marginTop="18.01dp"
					android:layout_marginStart="345.46dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/battery"
						android:layout_marginTop="0dp"
						android:layout_marginStart="44dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/rectangle"
							android:src="@drawable/rectangle"
							android:contentDescription="rectangle"
							 android:alpha="0.34999999403954"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="22.87dp"
							android:layout_height="11.78dp" />

						<ImageView android:id="@+id/combined_shape"
							android:src="@drawable/combined_shape"
							android:contentDescription="combined_shape"
							 android:alpha="0.40000000596046"
							android:layout_marginStart="24dp"
							android:layout_marginTop="4dp"
							android:layout_width="1.38dp"
							android:layout_height="4.16dp" />

						<ImageView android:id="@+id/rectangle_ek1"
							android:src="@drawable/rectangle_ek1"
							android:contentDescription="rectangle_ek1"
							 android:layout_marginStart="2dp"
							android:layout_marginTop="2dp"
							android:layout_width="18.71dp"
							android:layout_height="7.62dp" />

					</RelativeLayout>

					<ImageView android:id="@+id/wifi"
						android:src="@drawable/wifi"
						android:contentDescription="wifi"
						 android:layout_marginStart="23dp"
						android:layout_marginTop="0dp"
						android:layout_width="15.87dp"
						android:layout_height="11.4dp" />

					<ImageView android:id="@+id/mobile_signal"
						android:src="@drawable/mobile_signal"
						android:contentDescription="mobile_signal"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="17.67dp"
						android:layout_height="11.09dp" />


					<RelativeLayout android:id="@+id/recording_indicator"
						android:layout_marginTop="-10dp"
						android:layout_marginStart="5dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/indicator"
							android:background="@drawable/indicator_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="6.24dp"
							android:layout_height="6.24dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/left_side"
					android:layout_marginTop="12.47dp"
					android:layout_marginStart="21.83dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/time"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/_9_41"
							android:src="@drawable/_9_41"
							android:contentDescription="_9_41"
							 android:layout_marginStart="12.94dp"
							android:layout_marginTop="5.37dp"
							android:layout_width="29.55dp"
							android:layout_height="11.53dp" />

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>